fixed much things of the operations api
